<resources>
    <string name="app_name">RedStackApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_login">ورود</string>
    <string name="text_login">ورود به حساب کاربری</string>
    <string name="button_login">ورود</string>
    <string name="hint_email">نام کاربری (ایمیل)</string>
    <string name="text_noAccount">حساب کاربری ندارید؟</string>
    <string name="text_signUp">عضو شوید</string>
    <string name="welcome">به بهترین ها فکر کنید! خوش آمدید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_txt">عضویت</string>
    <string name="register_txt_create">حساب کاربری دارید؟</string>
    <string name="create_new">ایجاد حساب کاربری جدید</string>
    <string name="hint_name">نام و نام خانوادگی</string>
    <string name="hint_pass">کلمه عبور </string>
    <string name="hint_pass_again">تکرار کلمه عبور </string>
    <string name="txt_create_new">عضویت</string>
    <string name="txt_enter">وارد شوید!</string>
    <string name="article_appBar">تک مقاله</string>
    <string name="bookmark">bookmark</string>
    <string name="name_user">علی خرامان</string>
    <string name="last_seen">12 روز پیش</string>
    <string name="button_sendComment">ارسال دیدگاه</string>
    <string name="send_comment">ارسال دیدگاه</string>
    <string name="hint_enterComment">دیدگاه خود را اینجا بنویسید</string>
    <string name="title_home_page">صفحه اول</string>
    <string name="title_write_Article">نوشتن مقاله </string>
    <string name="title_write_Article_draft">پیش نویس </string>
    <string name="title_best">برترین مقالات</string>
    <string name="title_foryou">برای شما</string>
    <string name="title_borse">بورس</string>
    <string name="title_ecommerce">اقتصاد</string>
    <string name="title_write">عنوان</string>
    <string name="title_article_txt">متن مقاله</string>
    <string name="title_keyword">کلمات کلیدی</string>
    <string name="commerce">اقتصاد</string>
    <string name="publish_article">انتشار مقاله</string>
    <string name="profile_name">علی خرامان</string>
    <string name="profile_job">طراح رابط و تجربه کاربری</string>
    <string name="posts_text">نوشته ها</string>
    <string name="favorite_text">علاقه‌مندی ها</string>
    <string name="_128">128</string>
    <string name="post_text">نوشته</string>
    <string name="_2379">۲۳۷۹</string>
    <string name="follower_text">دنبال کننده</string>
    <string name="btn_follow">دنبال کردن</string>
    <string name="editArticle">ویرایش مقاله</string>
    <string name="deleteArticle">حذف مقاله</string>
    <string name="title_sample">قیمت بیت کوین برای اولین‌بار در یک سال گذشته به ۱۱٫۶ هزار دلار رسید</string>
    <string name="sample_name">محمد جواد رحمانی</string>
    <string name="sample_comment">اینجا عرضه وحشتناک سهام های دولتی رشد های بی سر ته سهام های دولتی ذکر نشده سهام بدون پشتوانه عرضه کردن حبابه اگر همینطور بیشتر بشه قطعا از این نقاطی ک‌گفتی عبور میکنه خدا نکنه سقوط کنه</string>
    <string name="sample_title2">اپل خبر تجزیه سهام خود را اعلام کرد-این برای سرمایه گذاران چه معنایی خواهد داشت؟</string>
    <string name="keyWords">کلیدواژه ها</string>
    <string name="sample_chip1">سرمایه‌گذاری</string>
    <string name="sample_chip2">سهام</string>
    <string name="sample_chip3">apple</string>
    <string name="sample_chip4">اقتصاد</string>
    <string name="related_articles">مقالات مرتبط</string>
    <string name="user_comments">دیدگاه کاربران</string>
    <string name="sample_date">‏3 روز پیش</string>
    <string name="sample_title3">کاهش درآمدهای گوگل در سه‌ماهه دوم سال ۲۰۲۰ طی ۱۶ سال اخیر بی‌سابقه بوده است</string>
    <string name="sample_desc1">اپل در طول اعلام نتایج درآمد سه‌ ماهه سوم خود در روز پنج شنبه گفت که هیات‌ مدیره شرکت یک تجزیه سهام چهار به یک را تصویب کرده‌ است</string>
    <string name="sample_likes">2.5k</string>
    <string name="sample_comment2">‏20 دیدگاه</string>
    <string name="profile_text">پروفایل</string>
    <string name="search_hint">جستجوی مقاله</string>
    <string name="article_desc">اپل در طول اعلام نتایج درآمد سه‌ماهه سوم خود در روز پنج شنبه گفت که هیات‌مدیره شرکت یک تجزیه سهام .چهار به یک را تصویب کرده‌است تجزیه‌های سهام، مثل لوازم آرایشی هستند، به این معنی که هیچ چیزی در مورد اصول اساسی یک شرکت را تغییر نمی‌دهند. آن‌ها می‌توانند با در دسترس‌تر کردن سهام-که در حالا ارزان‌قیمت‌تر است-منجر به تجدید سود از سرمایه گذاران کوچک‌تر شوند. اما این سود برای تاثیر گذاری بر قیمت سهام کافی نیست به طوری که سرمایه گذاران بزرگ‌تر در حال حاضر آزادانه سهام را .مبادله می‌کنند در این مورد، تمام سرمایه گذارانی که در حال حاضر سهمی دارند پس از بسته شدن بازار در ۲۴ آگوست سه سهم اضافی دریافت خواهند کرد. با خرید و فروش سهام اپل در حدود ۴۰۰ دلار در ساعات بعد، قیمت جدید برای صاحبان سهام حدود ۱۰۰ دلار خواهد بود؛ زمانی که معامله بر مبنای تعدیل‌شده بر اساس تجزیه .در ۳۱ آگوست آغاز می‌شود او در نشست سالیانه شرکت در سال ۱۹۹۴ گفت: «من فکر می‌کنم بیشتر مردم فکر می‌کنند که سهام برای تجزیه پول بیشتر فروخته خواهد شد. ما در وهله اول فکر .»نمی‌کنیم که این کار لزوما توصیه شده‌باشد وی افزود: «در وهله دوم، ما فکر نمی‌کنیم که این امر لزوما در طول یک دوره زمانی درست باشد. ما فکر می‌کنیم که سهام ما به احتمال زیاد با دنبال کردن سیاست‌های فعلی در طول زمان به صورت منطقی قیمت‌گذاری می‌شود تا این که آن را به روشی عمده تقسیم کنیم. و ما فکر نمی‌کنیم که قیمت متوسط لزوما بالاتر باشد. تفکر ما این است که بی‌ثباتی احتمالا تا حدی بیشتر خواهد بود و ما هیچ راهی برای کمک به سهام داران به عنوان یک گروه نمی‌بینیم.</string>
    <string name="description_row_home">کاهش درآمدهای گوگل در سه‌ماهه دوم سال ۲۰۲۰ طی ۱۶ سال اخیر بی‌سابقه بوده است</string>
    <string name="writer">آمنه داودی چیتگر</string>
    <string name="day_ago">4 روز پیش</string>
    <string name="edit_Article">ویرایش مقاله</string>
    <string name="exit_des">برای خروج دکمه برگشت را دوباره کلیک کنید</string>
</resources>