<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_def"
    android:background="@drawable/dialog_bg"
    android:layoutDirection="rtl"
    android:layout_marginTop="@dimen/margin_def_3x"
    android:padding="@dimen/padding_def">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_comment"
        android:textSize="@dimen/textSize_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_def"
        app:boxCornerRadiusBottomEnd="@dimen/radius_def"
        app:boxCornerRadiusBottomStart="@dimen/radius_def"
        app:boxCornerRadiusTopEnd="@dimen/radius_def"
        app:boxCornerRadiusTopStart="@dimen/radius_def"
        app:boxStrokeColor="@color/text_input_border"
        app:layout_constraintStart_toStartOf="@id/textView_comment"
        app:layout_constraintTop_toBottomOf="@id/textView_comment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/hint_enterComment"
            android:maxLines="20"
            android:minLines="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sendComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_def_0.5x"
        android:padding="@dimen/padding_def"
        android:text="@string/button_sendComment"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_16"
        app:backgroundTint="@color/blue_btn"
        app:cornerRadius="@dimen/radius_def"
        app:layout_constraintDimensionRatio="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout" />

</androidx.constraintlayout.widget.ConstraintLayout>


